<?xml version="1.0"?>
<package format="3">
  <name>tesseract_ext</name>
  <version>0.1.0</version>
  <description>The Tesseract External Packages (Pure CMake)</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>BSD</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <exec_depend>bullet3_ros</exec_depend>
  <exec_depend>fcl_ros</exec_depend>
  <exec_depend>libccd_ros</exec_depend>
  
  <export>
    <metapackage/>
  </export>

</package>
